# zig-pico-cmake

./: .gitignore  CMakeLists.txt  Readme.md  build.sh  build.zig  build.zig.zon  clean.sh
sdk/: CMakeLists.txt  clean.sh  imports.h
sdk/config/pico/: version.h
src/: c_sdk.h  c_sdk.zig  c_sdk_fixes.zig  cimport_generated.zig  hal.zig  main.zig  pico.zig  sdk.zig  wrappers.c
